--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,123 @@ body {
 }
 
 h1 {
-  font: normal 5rem/1.5 'docstreet', 'beatstreet', sans-serif;
+  font: normal 3rem/1.5 'docstreet', 'beatstreet', sans-serif;
+  text-align: center;
 }
 
 h2, h3, h4, h5, h6 {
   font: bold 2rem/1.5 'beatstreet', arial, sans-serif;
 }
+
+/*-- Images --*/
+.logo {
+  margin: 0 auto;
+  width: 100px;
+}
+
+.med {
+  max-width: 500px;
+  width: 100%;
+}
+
+.sm {
+  max-width: 250px;
+  width: 100%;
+}
+
+.sidebar img {
+  max-width: 75px;
+  width: 100%;
+}
+
+.hero img, .section-break img {
+  max-width: 800px;
+  width: 100%;
+}
+
+/*--****************** End Universal Styling ************************--*/
+
+/*--****************** Main Content Styling *************************--*/
+
+/*-------------------- Begin Header Styling ---------------------------*/
+
+/*-- Hamburger Menu (begin) --*/
+.hamburger{
+  background:none;
+  border:0;
+  color:#e29c3e;
+  cursor:pointer;
+  font-size:1.4em;
+  font-weight:bold;
+  line-height:45px;
+  outline:none;
+  padding:5px 15px 0px 15px;
+  position:absolute;
+  right:0;
+  /* top:20%; */ /*-- commented out to preserve syntax for future use */
+  z-index:10000000000000;
+}
+
+.cross{
+  background:none;
+  border:0;
+  color:#e29c3e;
+  cursor:pointer;
+  font-size:3em;
+  font-weight:bold;
+  line-height:65px;
+  outline:none;
+  padding:7px 15px 0px 15px;
+  position:absolute;
+  right:0;
+  /* top:20%; */ /*-- commented out to preserve syntax for future use */
+  z-index:10000000000000;
+}
+
+.menu {
+  background-image: url(../images/brickwall.png);
+  position:absolute;
+  text-align:center;
+  /* top: 100px; */ /*-- commented out to preserve syntax for future use */
+  width:100%;
+  z-index:1000000;
+}
+
+.menu ul {
+  list-style-image: none;
+  list-style-type: none;
+}
+
+.menu li {
+  border-bottom:#1E2223e3 1px solid;
+  display: block;
+  padding:15px 0 15px 0;
+}
+
+.menu li:hover {
+  background:#1e2223;
+  border-bottom:#B7C2C4 1px solid;
+  display: block;
+  padding:15px 0 15px 0;
+}
+
+.menu ul li a {
+  color:#549DB1;
+  font: bold 1.3rem/1 'arr-dep', sans-serif;
+  margin: 0px;
+  text-decoration:none;
+  text-shadow: 1px 1px #00000073;
+}
+
+.menu ul li a:hover {
+  color: #749757;
+  text-decoration:none;
+}
+/*-- Hamburger Menu (end) --*/
+
+.desktop-nav {
+  display: none;
+}
+
+
+/*-------------------- End Header Styling -----------------------------*/
