--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,20 @@ h2, h3, h4, h5, h6 {
   width: 100%;
 }
 
+a {
+  color: black;
+  font: bold 2rem/normal 'beatstreet', 'quattro', sans-serif;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-shadow: 1px 1px 3px white;
+}
+
+a:hover {
+  color: #6b110c;
+  text-decoration: underline;
+  text-shadow: 1px 1px 3px white;
+}
+
 /*--****************** End Universal Styling ************************--*/
 
 /*--****************** Main Content Styling *************************--*/
@@ -93,7 +107,7 @@ h2, h3, h4, h5, h6 {
 .hamburger{
   background:none;
   border:0;
-  color:#e29c3e;
+  color: #6b110c;
   cursor:pointer;
   font-size:1.4em;
   font-weight:bold;
@@ -109,7 +123,7 @@ h2, h3, h4, h5, h6 {
 .cross{
   background:none;
   border:0;
-  color:#e29c3e;
+  color:#6b110c;
   cursor:pointer;
   font-size:3em;
   font-weight:bold;
@@ -137,20 +151,20 @@ h2, h3, h4, h5, h6 {
 }
 
 .menu li {
-  border-bottom:#1E2223e3 1px solid;
+  /* border-bottom:#1E2223e3 1px solid; */
   display: block;
   padding:15px 0 15px 0;
 }
 
 .menu li:hover {
-  background:#1e2223;
-  border-bottom:#B7C2C4 1px solid;
+  background:#1e222395;
+  /* border-bottom:#B7C2C4 1px solid; */
   display: block;
   padding:15px 0 15px 0;
 }
 
 .menu ul li a {
-  color:#549DB1;
+  color: white;
   font: bold 1.3rem/1 'arr-dep', sans-serif;
   margin: 0px;
   text-decoration:none;
@@ -158,7 +172,7 @@ h2, h3, h4, h5, h6 {
 }
 
 .menu ul li a:hover {
-  color: #749757;
+  color: white;
   text-decoration:none;
 }
 /*-- Hamburger Menu (end) --*/
@@ -169,3 +183,7 @@ h2, h3, h4, h5, h6 {
 
 
 /*-------------------- End Header Styling -----------------------------*/
+
+.section-break {
+  display: none;
+}
