--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ blockquote p {
   text-align: center;
 }
 
-.hero, .overview, blockquote, .albums {
+.hero1, .overview, blockquote, .albums {
   border-bottom: 3px solid black;
 }
 
@@ -80,10 +80,11 @@ blockquote p {
 .logo {
   background-color: white;
   left: 0;
-  padding: 0 100% 6px 2%;
+  padding: 1px 100% 0 15px;
   position: absolute;
   width: 100px;
 }
+
 .med {
   border: 5px solid #6b110c;
   max-width: 500px;
@@ -100,17 +101,24 @@ blockquote p {
   width: 100%;
 }
 
-.hero img, .section-break img {
+.hero1 img, .section-break img {
   max-width: 800px;
   width: 100%;
 }
 
-.hero img {
+.hero1 img, .hero2 img {
   padding-top: 75px;
 }
 
-.hero {
+.hero2 img {
+  background-color: white;
+  width: 100%;
+}
+
+.hero1, .hero2 {
   background-image: url(../images/brickwall.png);
+  background-size: contain;
+
 }
 
 .nav-bar {
@@ -215,6 +223,10 @@ a:hover {
 }
 /*-------------------- End Header Styling -----------------------------*/
 /*-------------------- Begin Main Content Styling ---------------------*/
+.hero2 {
+  display: none;
+}
+
 .section-break {
   display: none;
 }
@@ -248,6 +260,7 @@ blockquote p {
 
 .albums {
   background: #6b110c url(../images/brickwall.png) repeat fixed center;
+  background-size: contain;
   margin: 10px auto;
   padding-bottom: 15px;
 }
@@ -339,6 +352,144 @@ footer {
 /*--****************** Begin 815 Min-Width Media Query **************--*/
 
 @media (min-width: 815px) {
+  .nav-bar {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+
+  .logo {
+    align-items: center;
+    padding: 1px 0 15px 15px;
+    position: static;
+  }
+
+  .menu, .hamburger, .cross {
+    display: none;
+  }
+
+  .desktop-nav {
+    display: flex;
+    flex-grow: 2;
+    justify-content: space-between;
+  }
+
+  .desktop-nav ul {
+    align-items: baseline;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style-type: none;
+    /* padding: 25px 5%; */
+  }
+
+  .main-nav {
+    padding: 25px 2% 25px 20%;
+  }
+
+  .main-nav li {
+    border-right: 1px solid black;
+  }
+
+  .desktop-nav ul li {
+    padding: 10px;
+  }
+
+  .social {
+    width: 30%;
+  }
+
+  .fb-logo {
+    order: 2;
+  }
+
+  .insta-logo {
+    order: 3;
+  }
+
+  .twtr-logo {
+    order: 4;
+  }
+
+  .form {
+    order: 1;
+  }
+
+  .input {
+    width: 75%;
+  }
+
+  /*-- Dropdown Menu from W3 Schools --*
+        https://www.w3schools.com/howto/howto_css_dropdown.asp --*/
+  /* Dropdown Button */
+  .dropbtn {
+    background-color: white;
+    padding: 0 10px;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    display: inline-block;
+    position: relative;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    background-image: url(../images/brickwall.png);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: none;
+    min-width: 160px;
+    position: absolute;
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content ul li {
+    border-right: none;
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+  }
+
+  .dropdown-content ul li a {
+    color: white;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    color: black;
+    padding: 5px 20px;
+    width: 100%;
+  }
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: black;
+    color: white;
+    width: 100%;
+  }
+
+  .main-li a, .dropbtn {
+    font: normal 1rem/1.5 'quattro';
+  }
+
+  .dropdown-content a {
+    font: normal 1.5rem/1.5 'docstreet';
+  }
+
+  .hero1 {
+    display: none;
+  }
+
+  .hero2 {
+    border-bottom: 3px solid black;
+    display: block;
+  }
 
   .site-content {
     padding: 2% 0;
@@ -350,6 +501,7 @@ footer {
 
   .sidebar {
     background: #6b110c url(../images/brickwall.png) repeat fixed center;
+    background-size: contain;
     display: block;
     height: 90%;
     margin: 15px auto 0;
